[tool.poetry]
name = "cobhan"
version = "0.1.0"
description = "Cobhan FFI"
authors = ["Joey Wilhelm <tarkatronic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
cffi = "^1.15.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
coverage = "^6.3.2"
pytest-sugar = "^0.9.4"
pylint = "^2.12.2"
pytest = "^7.0.1"
black = "^22.1.0"
tox = "^3.24.5"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
